--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,11 @@ name = "cryptocast"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = ["jupyter>=1.1.1", "kaggle>=1.7.4.5"]
+requires-python = ">=3.11"
+dependencies = [
+  "jupyter>=1.1.1",
+  "kaggle>=1.7.4.5",
+  "keras>=3.0.0",
+  "numpy>=1.26,<2.0",
+  "tensorflow>=2.16.0",
+]
